refactor: 리뷰 메일 재전송 로직 보완
- PENDING 데이터 고려
- 테스트 코드 추가 보완